--- a/MyFirstVueApp.Database/MyFirstVueApp.Database.csproj
+++ b/MyFirstVueApp.Database/MyFirstVueApp.Database.csproj
@@ -5,4 +5,8 @@
         <RootNamespace>Database</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="StoredProcedures" />
+    </ItemGroup>
+
 </Project>
